Add goggle map to tour show and nrew reviews form

--- a/Search Results/search-results.html
+++ b/Search Results/search-results.html
@@ -89,11 +89,6 @@
 				</div>
 			</div>
 		</div>
-
-		</div>
-
-		<!-- MORE INFORMATION END -->
-
 		<!-- REVIWES -->
 		<div class="container">
 			<h3 class="container-heading">Reviews</h3>
@@ -125,13 +120,23 @@
 			</div>
 			<form>
 				<div class="form-group">
-					<label for="exampleInputEmail1">Write your own review</label>
-					<input type="email" class="form-control" id="exampleInputEmail1">
+					<h5 class="comment-heading">Write your own review</h5>
+				<br />
+				<label for = "headerInput">Heading:</label>
+				<input type="text" class="form-control" id="commentHeadingInput">
+				<br />
+				<label for = "headerInput">Review:</label>
+					<input type="text" class="form-control" id="commentInput">
 				</div>
 				<button type="submit" class="btn btn-primary float-right">Submit</button>
 			</form>
 		</div>
 		<!-- REVIWES -->
+
+		</div>
+
+		<!-- MORE INFORMATION END -->
+
 
 
 		<!-- SIDEBAR -->
