--- a/Show Destination/show-destination.html
+++ b/Show Destination/show-destination.html
@@ -117,14 +117,18 @@
 			</div>
 			<form>
 				<div class="form-group">
-					<label for="exampleInputEmail1">Write your own review</label>
-					<input type="email" class="form-control" id="exampleInputEmail1">
-				</div>
+			    <h5 class="comment-heading">Write your own review</h5>
+				<br />
+				<label for = "headerInput">Heading:</label>
+				<input type="text" class="form-control" id="commentHeadingInput">
+				<br />
+				<label for = "headerInput">Review:</label>
+			    <input type="text" class="form-control" id="commentInput">
+			  </div>
 				<button type="submit" class="btn btn-primary float-right">Submit</button>
 			</form>
 		</div>
 		<!-- REVIWES -->
-
 
 		<!-- SIDEBAR -->
 		<div class="sidebar">
