--- a/Tour Show/tour-show.html
+++ b/Tour Show/tour-show.html
@@ -20,13 +20,49 @@
 		</nav>
 		<!-- NAVBAR END -->
 		<!-- BANNER -->
-		<div class="image-banner" style="background-image: url(https://static.pexels.com/photos/34608/pexels-photo.jpg);">
-    	<div class="mask">
+		<div class="gradient-banner" >
         <h1>Luxury Europe Tour</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet congue velit quis gravida. Vivamus cursus arcu a tempor dictum.Quisque sapien nisl, porttitor ut ligula sed, commodo eleifend purus. Eget scelerisque erat condimentum at. Aenean consectetur magna tempus orci ullamcorper, ac faucibus.</p>
     	</div>
 		</div>
 		<!-- BANNER END -->
+		<!-- GOOLE MAP -->
+		<div id = "googleMap">
+			<script>
+				function myMap() {
+					var mapProp= {
+						center:new google.maps.LatLng(21.0167, 12.3000),
+						zoom:2,
+					};
+					var barcelona = new google.maps.LatLng(41.2974, 2.0833);
+					var rome = new google.maps.LatLng(41.9028, 12.4964);
+					var paris = new google.maps.LatLng(48.8566, 2.3522);
+					var london = new google.maps.LatLng(51.508742,-0.120850);
+					var ortambo = new google.maps.LatLng(-26.1367 , 28.2411);
+					var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+					var marker1 = new google.maps.Marker({position: london});
+					var marker2 = new google.maps.Marker({position: ortambo});
+					var marker3 = new google.maps.Marker({position: paris});
+					var marker4 = new google.maps.Marker({position: rome});
+					var marker5 = new google.maps.Marker({position: barcelona});
+					marker1.setMap(map);
+					marker2.setMap(map);
+					marker3.setMap(map);
+					marker4.setMap(map);
+					marker5.setMap(map);
+
+					var flightPath = new google.maps.Polyline({
+					path: [ortambo, london, paris, rome, barcelona],
+					strokeColor: "#0000FF",
+					strokeOpacity: 0.8,
+					strokeWeight: 2
+					});
+					flightPath.setMap(map);
+				}
+			</script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjj2DSxrDr9jArPVtf5gcguBo7m6NVAsM&callback=myMap"></script>
+		</div>
+		<!-- GOOGLE MAP END -->
 		<!-- TOUR LIST -->
 		<div class="container">
 			<div class="list-group">
@@ -132,6 +168,7 @@
 				</div>
 		</nav>
 		<!-- FOOTER END -->
+
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
