tweak styling and show travelbook buttons after search

--- a/Search Results/search-results.html
+++ b/Search Results/search-results.html
@@ -39,7 +39,7 @@
 		<!-- GOOGLE SEARCH END -->
 
 		<!-- BUTTONS -->
-		<div class="container container-small mt-3 clearfix">
+		<div class="container container-small mt-3 clearfix travel-book-buttons">
 				<button class="btn btn-success ml-1 float-right js-new-travelbook">New Travelbook</button>
 				<button class="btn btn-primary ml-1 float-right js-existing-travelbook">Add to my existing travelbook</button>
 		</div>
@@ -48,11 +48,12 @@
 		<!-- MORE INFORMATION -->
 
 		<div class="destination-info">
+			<div class="background-grey">
 			<div class="container">
 				<h3 class="container-heading">Gallery</h3>
 				<div class="row photos-row"></div>
 			</div>
-			<div class="background-grey">
+		</div>
 			<div class="container">
 				<h3 class="container-heading">Resources</h3>
 				<div class="row">
@@ -88,8 +89,9 @@
 					</div>
 				</div>
 			</div>
-		</div>
+
 		<!-- REVIWES -->
+		<div class="background-grey">
 		<div class="container">
 			<h3 class="container-heading">Reviews</h3>
 			<div class="row">
@@ -131,6 +133,7 @@
 				<button type="submit" class="btn btn-primary float-right">Submit</button>
 			</form>
 		</div>
+	</div>
 		<!-- REVIWES -->
 
 		</div>
