link up destinations to index page

--- a/DestinationIndex/destination-index.html
+++ b/DestinationIndex/destination-index.html
@@ -26,89 +26,92 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Cape Town">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
+						<h4 class="card-title">Cape town</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				</a>
 				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
+  			<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Switzerland">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
+						<h4 class="card-title">Switzerland</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				</a>
 				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
+				<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Columbia">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
+						<h4 class="card-title">Columbia</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
-				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
-				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					</div>
-				</a>
+
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Paris">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
+						<h4 class="card-title">Paris</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				</a>
 				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
+  			<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Barcelona">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
+						<h4 class="card-title">Barcelona</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				</a>
 				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
+				<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Rome">
 					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
 					<div class="card-block">
-						<h4 class="card-title">Card title</h4>
+						<h4 class="card-title">Rome</h4>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				</a>
+
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-12 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=California">
+					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<div class="card-block">
+						<h4 class="card-title">California</h4>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</a>
+				</div>
+  			<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Miami">
+					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<div class="card-block">
+						<h4 class="card-title">Miami</h4>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</a>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=New York">
+					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<div class="card-block">
+						<h4 class="card-title">New York</h4>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</a>
+
 				</div>
 			</div>
 		</div>
