--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -32,38 +32,38 @@
 		  <h3 class="container-heading">You previously looked at</h3>
 		  <div class="row">
 		    <div class="col-12 col-md-6 col-lg-3">
-		      <a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+		      <a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Paris">
 				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 				      <div class="card-img-overlay">
-				        <h4 class="card-title">Card title</h4>
+				        <h4 class="card-title">Paris</h4>
 				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 				      </div>
 				    </a>
 					</div>
 		    <div class="col-12 col-md-6 col-lg-3">
-					<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+					<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Barcelona">
 				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 				      <div class="card-img-overlay">
-				        <h4 class="card-title">Card title</h4>
+				        <h4 class="card-title">Barcelona</h4>
 				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 				      </div>
 				    </a>
 					</div>
 
 		    <div class="col-12 col-md-6 col-lg-3">
-					<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+					<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Rome">
 				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 				      <div class="card-img-overlay">
-				        <h4 class="card-title">Card title</h4>
+				        <h4 class="card-title">Rome</h4>
 				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 				      </div>
 				    </a>
 					</div>
 		    <div class="col-12 col-md-6 col-lg-3">
-						<a class="card card-inverse card-link" href="../Destination Show/destination-show.html">
+						<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Cape Town">
 				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
 				      <div class="card-img-overlay">
-				        <h4 class="card-title">Card title</h4>
+				        <h4 class="card-title">Cape Town</h4>
 				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
 				      </div>
 						</a>
@@ -112,31 +112,31 @@
 			<h3 class="container-heading">Top Destinations</h3>
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-						<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-					</a>
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Paris">
+					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<div class="card-block">
+						<h4 class="card-title">Paris</h4>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</a>
 				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-						<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-					</a>
+				<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Barcelona">
+					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<div class="card-block">
+						<h4 class="card-title">Barcelona</h4>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</a>
 				</div>
-				<div class="col-12 col-md-12 col-lg-4">
-					<a class="card card-link" href="../Destination Show/destination-show.html">
-						<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
-						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-					</a>
+				<div class="col-12 col-md-6 col-lg-4">
+					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Rome">
+					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<div class="card-block">
+						<h4 class="card-title">Rome</h4>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					</div>
+				</a>
 				</div>
 			</div>
 		</div>
