--- a/home.html
+++ b/home.html
@@ -124,7 +124,9 @@
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 					</div>
 				</a>
+
 				</div>
+				<a class="btn btn-primary center-button btn-lg" href="DestinationIndex/destination-index.html">View All</a>
 			</div>
 		</div>
 		<!-- TOP DESTINATION END -->
