View all destinations form landing page

--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -138,6 +138,7 @@
 					</div>
 				</a>
 				</div>
+				<a class="btn btn-primary center-button btn-lg" href="../DestinationIndex/destination-index.html">View All</a>
 			</div>
 		</div>
 		<!-- TOP DESTINATION END -->
