--- a/home.html
+++ b/home.html
@@ -65,28 +65,28 @@
 				<div class="row">
 					<div class="col-12 col-md-12 col-lg-4">
 						<a href="Tour Show/tour-show.html" class="card card-link">
-							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<img class="card-img-top" src="img/Brazil_Hill.jpeg" >
 							<div class="card-block">
-								<h4 class="card-title">Card title</h4>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<h4 class="card-title">Tropical Tour</h4>
+								<p class="card-text">Take a 1 week tour through the misty tropical valleys of Thailand.</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-12 col-md-12 col-lg-4">
 						<a href="Tour Show/tour-show.html" class="card card-link">
-							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<img class="card-img-top" src="img/Thailand_Festivals.jpeg" >
 							<div class="card-block">
-								<h4 class="card-title">Card title</h4>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<h4 class="card-title">Cultural Tour</h4>
+								<p class="card-text">Explore the cultures of Asia's oldest traditions for 2 weeks.</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-12 col-md-6 col-lg-4">
 						<a href="Tour Show/tour-show.html" class="card card-link">
-						<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+						<img class="card-img-top" src="img/DC_Landmark.jpg" >
 						<div class="card-block">
-							<h4 class="card-title">Card title</h4>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<h4 class="card-title">American History Tour</h4>
+							<p class="card-text">Take a 1 week tour through American History, by accompanying our guides through DC Washington. </p>
 						</div>
 					</a>
 					</div>
@@ -100,28 +100,28 @@
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<a class="card card-link" href="Show%20Destination/show-destination.html?location=Paris">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="img/France_Eiffel_Tower.jpeg" >
 					<div class="card-block">
 						<h4 class="card-title">Paris</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Paris is the capital of France.  Widely known for  the Eiffel Tower and the 12th-century, Gothic Notre-Dame Cathedral.</p>
 					</div>
 				</a>
 				</div>
   			<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="Show%20Destination/show-destination.html?location=Barcelona">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="img/Barcelona.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Barcelona</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Barcelona is the cosmopolitan capital of Spain.  Famed for its art and architecture.</p>
 					</div>
 				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="Show%20Destination/show-destination.html?location=Rome">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="img/Rome_Theatre.jpeg" >
 					<div class="card-block">
 						<h4 class="card-title">Rome</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Rome is situated in Italy.  Famous for its Ancient ruins, such as the Forum and the Colosseum.</p>
 					</div>
 				</a>
 
@@ -136,27 +136,27 @@
 				<h3 class="container-heading">What people said about us</h3>
 				<div class="row">
 					<div class="comment">
-						<img src="https://static.pexels.com/photos/295821/pexels-photo-295821.jpeg" class="rounded-circle comment-image">
+						<img src="img/Woman_3.jpeg" class="rounded-circle comment-image">
 						<div class="comment-text">
-								<h6 class="comment-heading">Best day evar!</h6>
-								<p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-								<p class="comment-author">Jane Doe</p>
+								<h6 class="comment-heading">Simply Amazing!</h6>
+								<p>I had the most amazing time exploring cultures throughout Asia.  My applause to the Cultural Tour.</p>
+								<p class="comment-author">Ellen Bane</p>
 						</div>
 					</div>
 					<div class="comment">
-						<img src="https://static.pexels.com/photos/262226/pexels-photo-262226.jpeg" class="rounded-circle comment-image">
+						<img src="img/Man.jpeg" class="rounded-circle comment-image">
 						<div class="comment-text">
-								<h6 class="comment-heading">Best day evar!</h6>
-								<p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-								<p class="comment-author">Jane Doe</p>
+								<h6 class="comment-heading">Thanks to Travel Buddy</h6>
+								<p>Thanks to Travel Buddy, I could explore my surrounding before I went to Paris.</p>
+								<p class="comment-author">Markus Ladden</p>
 						</div>
 					</div>
 					<div class="comment">
-						<img src="https://static.pexels.com/photos/91227/pexels-photo-91227.jpeg" class="rounded-circle comment-image">
+						<img src="img/Man_2.jpeg" class="rounded-circle comment-image">
 						<div class="comment-text">
-								<h6 class="comment-heading">Best day evar!</h6>
-								<p>This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-								<p class="comment-author">Jane Doe</p>
+								<h6 class="comment-heading">Best Day Ever!</h6>
+								<p>Exploring the streets of Barcelona was just breath-taking.  I thank Travel Buddy for providing me information regarding Barcelona!</p>
+								<p class="comment-author">Alex O'Malley</p>
 						</div>
 					</div>
 				</div>
