--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -33,38 +33,38 @@
 		  <div class="row">
 		    <div class="col-12 col-md-6 col-lg-3">
 		      <a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Paris">
-				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <img class="card-img" src="../img/France_Eiffel_Tower.jpeg" alt="Card image">
 				      <div class="card-img-overlay">
 				        <h4 class="card-title">Paris</h4>
-				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				        <p class="card-text">A European city which is the capital of France.  Best known for the Eiffel Tower and the 12th-century, Gothic Notre-Dame Cathedral.</p>
 				      </div>
 				    </a>
 					</div>
 		    <div class="col-12 col-md-6 col-lg-3">
 					<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Barcelona">
-				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <img class="card-img" src="../img/Barcelona.jpg" alt="Card image">
 				      <div class="card-img-overlay">
 				        <h4 class="card-title">Barcelona</h4>
-				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				        <p class="card-text">Barcelona is the cosmopolitan capital of Spain.  Famed for its art and architecture.</p>
 				      </div>
 				    </a>
 					</div>
 
 		    <div class="col-12 col-md-6 col-lg-3">
 					<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Rome">
-				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <img class="card-img" src="../img/Rome_Theatre.jpeg" alt="Card image">
 				      <div class="card-img-overlay">
 				        <h4 class="card-title">Rome</h4>
-				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				        <p class="card-text">Rome is situated in Italy.  Famous for its Ancient ruins, such as the Forum and the Colosseum.</p>
 				      </div>
 				    </a>
 					</div>
 		    <div class="col-12 col-md-6 col-lg-3">
 						<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Cape Town">
-				      <img class="card-img" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" alt="Card image">
+				      <img class="card-img" src="../img/south africa.png" alt="Card image">
 				      <div class="card-img-overlay">
 				        <h4 class="card-title">Cape Town</h4>
-				        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+				        <p class="card-text">Cape Town is one of South Africa's finest cities.  Tafelberg is one of Cape Town's most popular attractions.</p>
 				      </div>
 						</a>
 		    </div>
@@ -78,28 +78,28 @@
 				<div class="row">
 					<div class="col-12 col-md-12 col-lg-4">
 						<a class="card card-link" href="../Tour Show/tour-show.html">
-							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<img class="card-img-top" src="../img/London_Transport.jpg" >
 							<div class="card-block">
-								<h4 class="card-title">Card title</h4>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<h4 class="card-title">European Luxury Tour</h4>
+								<p class="card-text">Take a 4 week tour through Europe.  Explore all the luxuries that Europe has to offer.</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-12 col-md-12 col-lg-4">
 						<a class="card card-link" href="../Tour Show/tour-show.html">
-							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<img class="card-img-top" src="../img/CapeTown_TableMountain.jpeg" >
 							<div class="card-block">
-								<h4 class="card-title">Card title</h4>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<h4 class="card-title">Best of South Africa</h4>
+								<p class="card-text">Join us for a week of wonder in South Africa's most beautiful city and surrounding nature areas in Cape Town.</p>
 							</div>
 						</a>
 					</div>
 					<div class="col-12 col-md-12 col-lg-4">
 						<a class="card card-link" href="../Tour Show/tour-show.html">
-							<img class="card-img-top" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+							<img class="card-img-top" src="../img/NewYork_Streets.jpeg" >
 							<div class="card-block">
-								<h4 class="card-title">Card title</h4>
-								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<h4 class="card-title">City Life Tour</h4>
+								<p class="card-text">Take a week to experience the famous rushed streets of New York City.  Including tours to Manhattan and Brooklyn.</p>
 							</div>
 						</a>
 					</div>
@@ -113,28 +113,28 @@
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Paris">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/France_Eiffel_Tower.jpeg" >
 					<div class="card-block">
 						<h4 class="card-title">Paris</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Paris is the capital of France.  Widely known for  the Eiffel Tower and the 12th-century, Gothic Notre-Dame Cathedral.</p>
 					</div>
 				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Barcelona">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/Barcelona.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Barcelona</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Barcelona is the cosmopolitan capital of Spain.  Famed for its art and architecture.</p>
 					</div>
 				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Rome">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/Rome_Theatre.jpeg" >
 					<div class="card-block">
 						<h4 class="card-title">Rome</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Rome is situated in Italy.  Famous for its Ancient ruins, such as the Forum and the Colosseum.</p>
 					</div>
 				</a>
 				</div>
