Destination Index images and text

--- a/DestinationIndex/destination-index.html
+++ b/DestinationIndex/destination-index.html
@@ -27,28 +27,28 @@
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Cape Town">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/south africa.png" >
 					<div class="card-block">
 						<h4 class="card-title">Cape town</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Cape Town is one of South Africa's finest cities.  Tafelberg is one of Cape Town's most popular attractions.</p>
 					</div>
 				</a>
 				</div>
   			<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Switzerland">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/switzerland.png" >
 					<div class="card-block">
 						<h4 class="card-title">Switzerland</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Located in central Europe.  Switzerland is native to its lakes, villages and the high peaks of the Alps.</p>
 					</div>
 				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Columbia">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/columbia.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Columbia</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">A country located at the Nothern tip of South America.  It is home to rainforests, Andes mountains and numerous coffee plantations.</p>
 					</div>
 				</a>
 
@@ -57,28 +57,28 @@
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Paris">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/France_Museum.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Paris</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">A European city which is the capital of France.  Best known for the Eiffel Tower and the 12th-century, Gothic Notre-Dame Cathedral.</p>
 					</div>
 				</a>
 				</div>
   			<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Barcelona">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/Barcelona.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Barcelona</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Barcelona is the cosmopolitan capital of Spain.  Famed for its art and architecture.</p>
 					</div>
 				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Rome">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/Rome_Theatre.jpeg" >
 					<div class="card-block">
 						<h4 class="card-title">Rome</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Rome is situated in Italy.  Famous for its Ancient ruins, such as the Forum and the Colosseum.</p>
 					</div>
 				</a>
 
@@ -87,28 +87,28 @@
 			<div class="row">
 				<div class="col-12 col-md-12 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=California">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/California_Golden_Bridge.jpeg" >
 					<div class="card-block">
 						<h4 class="card-title">California</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Located at Western America.  Famous for its cliff-lined beaches, redwood forest and the Sierra Nevada Mountains</p>
 					</div>
 				</a>
 				</div>
   			<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=Miami">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/miami.jpg" >
 					<div class="card-block">
 						<h4 class="card-title">Miami</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">Miami is a City in Florida.  This city is popular for its colorful art deco buildings, white sand, surfside hotels and trendsetting nightclubs.</p>
 					</div>
 				</a>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<a class="card card-link" href="../Show%20Destination/show-destination.html?location=New York">
-					<img class="card-img-top card-img-round" src="https://static.pexels.com/photos/34608/pexels-photo.jpg" >
+					<img class="card-img-top card-img-round" src="../img/NewYork_Statue_ofLiberty.jpeg" >
 					<div class="card-block">
 						<h4 class="card-title">New York</h4>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<p class="card-text">New York is located at the Eastern side of America.  This city is widely known for the Empire State Building, Central Park, Broadway theater and the Statue of Liberty.</p>
 					</div>
 				</a>
 
