Text update in home.html

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 		<div class="welcome-banner" style="background-image: url(https://static.pexels.com/photos/417344/pexels-photo-417344.jpeg);">
 				<p class="logo logo-large">Travel Buddy</p>
 				<h2>Let’s go on an adventure!</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet congue velit quis gravida. Vivamus cursus arcu a tempor dictum.Quisque sapien nisl, porttitor ut ligula sed, commodo eleifend purus. Fusce bibendum tristique nulla, eget scelerisque erat condimentum at. Aenean consectetur magna tempus orci ullamcorper, ac faucibus enim iaculis.</p>
+				<p>Welcome to Travel Buddy! Here you can explore destinations and be provided with a gallery view, nearby attractions, restaurants and accomodation. A selection of preplanned tours will also be provided. Add tours and destinations to your travel journal and view travel time and distances.</p>
 				<a class="btn btn-primary btn-lg" href="Login Page/login.html">Let's go!</a>
 		</div>
 		<!-- WELCOME BANNER END -->
