--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 				<p>Welcome to Travel Buddy! Here you can explore destinations and be provided with a gallery view, nearby attractions, restaurants and accomodation. A selection of preplanned tours will also be provided. Add tours and destinations to your travel journal and view travel time and distances.</p>
 				<a class="btn btn-primary btn-lg" href="Login Page/login.html">Let's go!</a>
 		</div>
-		<!-- WELCOME BANNER END -->
+		<!-- WELCOME BANNER END -->  
 		<!-- HOW DOES IT WORK -->
 		<div class="container">
 			<h3 class="container-heading">How does it work?</h3>
@@ -91,6 +91,7 @@
 					</a>
 					</div>
 				</div>
+				<a class="btn btn-primary center-button btn-lg" href="Tour Index/Tour-Index.html">View All</a>
 			</div>
 		</div>
 		<!-- PREPLANNED END -->
@@ -124,7 +125,6 @@
 						<p class="card-text">Rome is situated in Italy.  Famous for its Ancient ruins, such as the Forum and the Colosseum.</p>
 					</div>
 				</a>
-
 				</div>
 				<a class="btn btn-primary center-button btn-lg" href="DestinationIndex/destination-index.html">View All</a>
 			</div>
