--- a/Login Page/login.html
+++ b/Login Page/login.html
@@ -19,6 +19,7 @@
 ?>
 <html lang="en">
 	<head>
+	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Travel Buddy</title>
@@ -35,6 +36,7 @@
 					<a class="btn btn-outline-secondary btn-sm" href="../Sign Up Page/registration.html">Sign Up</a>
 				</div>
 		</nav>
+		
 		<!-- NAVBAR END -->
 		<div class="fullscreen-section">
 				<div class="card">
@@ -51,14 +53,17 @@
 						<input name = "password" type = "text" class="form-control"></input>
 					</div>
 					<input type="submit" value="Submit" class="btn btn-primary btn-submit float-right">
+					<!-- <a href = "../Landing Page/landing-page.html" class = "btn btn-primary btn-submit float-right">Submit</a> -->
 					<div class = "buttons">
 						<a href = "../home.html">Back</a>&emsp;
 						<a href = "#" class = "pass">
 						<a href = "#">Forgot your password?</a>
 					</div>
+					
 				</form>
 			</div>
 		</div>
+		
 		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
