update landing page

--- a/Landing Page/landing-page.html
+++ b/Landing Page/landing-page.html
@@ -25,7 +25,7 @@
 		<!-- NAVBAR END -->
 		<!-- WELCOME BANNER -->
 		<div class="welcome-banner" style="background-image: url(https://static.pexels.com/photos/41949/earth-earth-at-night-night-lights-41949.jpeg);">
-				<h2><span class="logo">Travel Buddy!</span></h2>
+				<h2>Welcome to </br><span class="logo">Travel Buddy!</span></h2>
 				<h4>What do you want to do?</h4>
 				<button class="btn btn-success btn toggle-travelbook btn-lg">View my tavelbook</button>
 				<a class="btn btn-primary btn-lg" href="../Search Results/search-results.html">Search new destinations</a>
@@ -43,7 +43,7 @@
 				        <p class="card-text">A European city which is the capital of France.  Best known for the Eiffel Tower and the 12th-century, Gothic Notre-Dame Cathedral.</p>
 				      </div>
 				    </a>
-					</div>
+			</div>
 		    <div class="col-12 col-md-6 col-lg-3">
 					<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Barcelona">
 				      <img class="card-img" src="../img/Barcelona.jpg" alt="Card image">
@@ -53,7 +53,6 @@
 				      </div>
 				    </a>
 					</div>
-
 		    <div class="col-12 col-md-6 col-lg-3">
 					<a class="card card-inverse card-link" href="../Show%20Destination/show-destination.html?location=Rome">
 				      <img class="card-img" src="../img/Rome_Theatre.jpeg" alt="Card image">
