--- a/Journal Destinations/journal_destinations.html
+++ b/Journal Destinations/journal_destinations.html
@@ -31,13 +31,13 @@
 			<script>
 				function myMap() {
 					var mapProp= {
-						center:new google.maps.LatLng(37.0902, 95.7129),
+						center:new google.maps.LatLng(37.09024, -95.712891),
 						zoom:2,
 					};
-					var california = new google.maps.LatLng(36.778259, 119.417931);
-					var miami = new google.maps.LatLng(25.778135, 80.179100.);
-					var newyork = new google.maps.LatLng(40.730610, 73.935242);
-					var ortambo = new google.maps.LatLng(26.1367 , 28.2411);
+					var california = new google.maps.LatLng(36.778261, -119.4179324);
+					var miami = new google.maps.LatLng(25.7616798, -80.1917902);
+					var newyork = new google.maps.LatLng(40.6781784, -73.9441579);
+					var ortambo = new google.maps.LatLng(-26.1366728, 28.2411459);
 
 					var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 					var marker1 = new google.maps.Marker({position: california});
