Travel journal update

--- a/Journal Destinations/journal_destinations.html
+++ b/Journal Destinations/journal_destinations.html
@@ -66,34 +66,34 @@
 			<div class="list-group">
 			  <a href="#" class="list-group-item home">
 			    HOME
-			  </a>
+			 </a>
 			  <div href="#" class="list-group-item list-group-item-action">
-					<p><b>Distance:</b> 13 276.6km</p>
-					<p><b>Leg Travel Duration:</b> 11 Hrs 15 Mins</p>
+					<p><b>Distance:</b> 16 723.6km</p>
+					<p><b>Leg Travel Duration:</b> 21 Hrs 14 Mins</p>
 				</div>
-				<a href="../Show%20Destination/show-destination.html?location=London" class="list-group-item active">
+				<a href="../Show%20Destination/show-destination.html?location=California" class="list-group-item active">
 			    California
 					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
 			  </a>
 				<div href="#" class="list-group-item list-group-item-action">
-					<p><b>Distance:</b> 470.8km</p>
-					<p><b>Leg Travel Duration:</b> 2 Hrs 25 Mins</p>
+					<p><b>Distance:</b> 4 747.8km</p>
+					<p><b>Leg Travel Duration:</b> 4 Hrs 41 Mins</p>
 				</div>
-				<a href="../Show%20Destination/show-destination.html?location=Paris" class="list-group-item active">
+				<a href="../Show%20Destination/show-destination.html?location=Miami" class="list-group-item active">
 			    Miami
 					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
 			  </a>
 				<div href="#" class="list-group-item list-group-item-action">
-					<p><b>Distance:</b> 1 420.3km</p>
-					<p><b>Leg Travel Duration:</b> 2 Hrs 15 Mins</p>
+					<p><b>Distance:</b> 2 053,1km</p>
+					<p><b>Leg Travel Duration:</b> 3Hrs 5 Mins</p>
 				</div>
-				<a href="../Show%20Destination/show-destination.html?location=Rome" class="list-group-item active">
+				<a href="../Show%20Destination/show-destination.html?location=NewYork" class="list-group-item active">
 			    New York
 					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
 			  </a>
 				<div href="#" class="list-group-item list-group-item-action">
-					<p><b>Distance:</b> 1 359.4km</p>
-					<p><b>Leg Travel Duration:</b> 1 Hrs 55 Mins</p>
+					<p><b>Distance:</b> 12 831km</p>
+					<p><b>Leg Travel Duration:</b> 14 Hrs 50 Mins</p>
 				</div>
 				<a href="#" class="list-group-item home">
 			    HOME
@@ -117,48 +117,40 @@
 			<div class="card">
 				<h6 class="sidebar-heading">Luxury Europe Tour</h6>
 				<div class="list-group">
-					<a href="#" class="list-group-item home">
-						HOME
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 13 276.6km</p>
-						<p><b>Leg Travel Duration:</b> 11 Hrs 15 Mins</p>
-					</div>
-					<a href="#" class="list-group-item active">
-						London
-						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 470.8km</p>
-						<p><b>Leg Travel Duration:</b> 2 Hrs 25 Mins</p>
-					</div>
-					<a href="#" class="list-group-item active">
-						Paris
-						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 1 420.3km</p>
-						<p><b>Leg Travel Duration:</b> 2 Hrs 15 Mins</p>
-					</div>
-					<a href="#" class="list-group-item active">
-						Rome
-						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
-					</a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 1021k</p>
-						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
-					</div>
-					<a href="../Destination Show/destination-show.html" class="list-group-item active">
-			    		Barcelona
-						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
-			 	    </a>
-					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 11 793.6km</p>
-						<p><b>Leg Travel Duration:</b> 14 Hrs 15 Mins</p>
-					</div>
-					<a href="#" class="list-group-item home">
-						HOME
-					</a>
+			    <a href="#" class="list-group-item home">
+			    HOME
+			  </a>
+			  <div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 16 723.6km</p>
+					<p><b>Leg Travel Duration:</b> 21 Hrs 14 Mins</p>
+				</div>
+				<a href="../Show%20Destination/show-destination.html?location=California" class="list-group-item active">
+			    California
+					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+			  </a>
+				<div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 4 747.8km</p>
+					<p><b>Leg Travel Duration:</b> 4 Hrs 41 Mins</p>
+				</div>
+				<a href="../Show%20Destination/show-destination.html?location=Miami" class="list-group-item active">
+			    Miami
+					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+			  </a>
+				<div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 2 053,1km</p>
+					<p><b>Leg Travel Duration:</b> 3Hrs 5 Mins</p>
+				</div>
+				<a href="../Show%20Destination/show-destination.html?location=NewYork" class="list-group-item active">
+			    New York
+					<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
+			  </a>
+				<div href="#" class="list-group-item list-group-item-action">
+					<p><b>Distance:</b> 12 831km</p>
+					<p><b>Leg Travel Duration:</b> 14 Hrs 50 Mins</p>
+				</div>
+				<a href="#" class="list-group-item home">
+			    HOME
+			  </a>
 				</div>
 			</div>
 		</div>
