--- a/Tour Show/tour-show.html
+++ b/Tour Show/tour-show.html
@@ -155,8 +155,8 @@
 						<button type="button" class="btn btn-danger btn-sm float-right">Delete</button>
 					</a>
 					<div href="#" class="list-group-item list-group-item-action">
-						<p><b>Distance:</b> 1021k</p>
-						<p><b>Leg Travel Duration:</b> 5 Hrs 45 Mins</p>
+						<p><b>Distance:</b>  1 359.4km</p>
+						<p><b>Leg Travel Duration:</b> 1 Hrs 55 Mins</p>
 					</div>
 					<a href="../Destination Show/destination-show.html" class="list-group-item active">
 			    		Barcelona
